--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="web o mně"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preload" as="image" href="/static/media/image.webp" type="image/webp" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
